<resources>
    <string name="app_name">Quiplash</string>

    <!-- View Titles -->
    <string name="your_friends">Your Friends</string>
    <string name="new_game">New Game</string>
    <string name="join_game">Join Game</string>
    <string name="profile">Profile</string>
    <string name="waiting_for_players">Waiting for Players</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="choose_answer">Choose the best answer</string>
    <string name="Enter_answer">Enter your answer to the question</string>
    <string name="wait_choosing">The other players choose the best answers</string>
    <!-- Dialogs -->
    <string name="delete_interaction">Do you really want to delete your Account?</string>
    <string name="enter_username_interaction">Enter Username</string>
    <string name="auth_failed">Authentication failed, please check your email and password.</string>
    <!-- Placeholders -->
    <string name="e_mail_placeholder">username@quiplash.com</string>
    <string name="username_placeholder">Username</string>
    <string name="password_placeholder">••••••••••••</string>
    <string name="set_username">your username</string>
    <string name="score_placeholder">Score: 123456789</string>
    <!-- Buttons -->
    <string name="start_game_btn">Start Game</string>
    <string name="invite_players_btn">Invite Players</string>
    <string name="end_game_btn">End Game</string>
    <string name="leave_game_btn">Leave Game</string>
    <string name="register_btn">Register</string>
    <string name="save_btn">Save</string>
    <string name="edit_account_btn">Edit Profile</string>
    <string name="delete_account_btn">Delete Account</string>
    <string name="ready_btn">Submit</string>
    <string name="go_home_btn">Go Home</string>
    <string name="change_profile_photo_btn">Change profile photo</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="guest_sign_in_btn">Sign In as Guest</string>
    <string name="guest_sign_up_btn">Sign Up as Guest</string>
    <string name="submit_btn">submit</string>
    <string name="forgot_password">forgot password?</string>
    <string name="reset_password">reset password</string>
    <!-- Actions -->
    <string name="cancel">CANCEL</string>
    <string name="invite">INVITE</string>
    <string name="delete">DELETE</string>
    <string name="add">ADD</string>
    <!-- Game Categories -->
    <string-array name="array_categories">
        <item name="standard">Standard</item>
        <item name="funny">Funny</item>
        <item name="harsh">Harsh</item>
        <item name="poetic">Poetic</item>
    </string-array>
    <!-- Amount Players -->
    <string-array name="amount_players">
        <item name="three_players">3 Players</item>
        <item name="four_players">4 Players</item>
        <item name="five_players">5 Players</item>
        <item name="six_players">6 Players</item>
        <item name="seven_players">7 Players</item>
        <item name="eight_players">8 Players</item>
        <item name="nine_players">9 Players</item>
        <item name="ten_players">10 Players</item>
    </string-array>
    <!-- Amount Rounds -->
    <string-array name="amount_rounds">
        <item name="three_rounds">3 Rounds</item>
        <item name="four_rounds">4 Rounds</item>
        <item name="five_rounds">5 Rounds</item>
        <item name="six_rounds">6 Rounds</item>
        <item name="seven_rounds">7 Rounds</item>
        <item name="eight_rounds">8 Rounds</item>
        <item name="nine_rounds">9 Rounds</item>
        <item name="ten_rounds">10 Rounds</item>
    </string-array>

    <!-- others -->
    <string name="friends">Friends</string>
    <string name="invite_player">Invite Player</string>
    <string name="delete_account">Delete Account</string>
    <string name="username">Username:</string>
    <string name="game_starts">Game starts</string>
    <string name="e_mail">E-Mail: </string>
    <string name="score">Score: </string>
    <string name="add_player">Add Player</string>
    <string name="password">Password: </string>
    <string name="password_retype">Retype Password:</string>
    <string name="username_not_available">Username already exists, please choose another username</string>
    <string name="already_have_an_account">You already have an account?</string>
    <string name="reset_password_success">We\'ve sent you an email to reset your password to your provided e-mail address</string>
    <string name="back_to_login">Back to Login</string>
    <string name="email_already_exists">This e-mail does already exist in our system. Please check your input</string>
    <string name="other_players_choose_answer">The other players choose the best answer</string>
    <string name="waiting_answers">Waiting for all answers to arrive.</string>
    <string name="next_round">Next Round</string>
    <string name="your_answer">Your Answer</string>
    <string name="next_round_starts">Next Round starts</string>
    <string name="show_scoreboard">Show Scoreboard</string>
    <string name="category_label">\"Category: \"</string>
    <string name="please_enter_username">please tip in a new username</string>
    <string name="answer_saved_successfully">Your Answer has been saved successfully!</string>
    <string name="weak_password">Password too short, enter minimum 6 characters!</string>
    <string name="wrong_password">Wrong Password!</string>
    <string name="somethin_went_wrong">UUPS! Something went wrong. Please try again later.</string>
    <string name="wrong_email">Wrong e-Mail!</string>
    <string name="answer_not_saved">Your Answer could not be saved</string>
    <string name="and_sign"><![CDATA[&]]></string>
    <string name="create_game">Create Game</string>
    <string name="game_title">Game Title</string>
    <string name="private_game">Private Game</string>
    <string name="amount_of_rounds">Amount of Rounds</string>
    <string name="amount_of_players">Amount of Players</string>
    <string name="category">Category</string>
    <string name="party_mode">Party Mode</string>
    <string name="shots">Shots</string>
    <string name="cocktails">Cocktails</string>
    <string name="wine">Wine</string>
    <string name="beer">Beer</string>
    <string name="choose_your_drinks">Choose your Drinks:</string>
    <string name="more">More</string>
    <string name="save_question">Save Question</string>
    <string name="current_password_label">current Password</string>
    <string name="next">NEXT</string>
    <string name="add_question">ADD QUESTION</string>
    <string name="sorry">Sorry!</string>
    <string name="you_must_be_registered">You must be registered to invite players to a game. Please sign in or sign up after this game.</string>
    <string name="uups">UUPS!</string>
    <string name="you_are_a_guest">Sorry, but you are a guest and can not use this function. Please register and you can add Questions and edit your Profile!</string>
    <string name="score_label">Score:</string>
    <string name="username_not_exist">Your Username does not exist! Please enter your existing guest-username!</string>
    <string name="go_back_arrow">go_back_arrow</string>
    <string name="funny">Funny</string>
    <string name="harsh">Harsh</string>
    <string name="poetic">Poetic</string>
    <string name="choose_your_type_of_question">Choose your type of question</string>
    <string name="or">or</string>
    <string name="new_mail_address">New Mail Address</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat New Password</string>
    <string name="please_type_in_your_current_password">Please type in your current password</string>
    <string name="you_haven_t_added_any_friends">You haven\'t added any friends yet. You can add your friends on the button below.</string>
    <string name="friends_who_aren_t_in_the_game_yet">Friends who aren\'t in the game yet</string>
    <string name="no_friends_found">No such friends found. They are all in or you haven\'t added any friends yet…</string>
    <string name="no_active_games">There are currently no active games. You can create a new one on the button below.</string>
    <string name="logo">logo</string>
    <string name="your_game_title">Your Game Title</string>
    <string name="checkmark">checkmark</string>
    <string name="choose_the_source">Choose the source</string>
    <string name="you_don_t_have_an_account">You don\'t have an account?</string>
    <string name="enter_username">Please enter your Username</string>
    <string name="border_for_profile_picture">Border for Profile-Picture</string>
</resources>
