<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_background"
    tools:context=".user.profile.ProfileActivity">

    <EditText
        android:id="@+id/email_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:fontFamily="@font/roboto_slab"
        android:hint="@string/new_mail_address"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="#92FFFFFF"
        android:textCursorDrawable="@color/colorTurquoise"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textViewMail"
        app:layout_constraintTop_toBottomOf="@+id/textViewPwOld" />

    <EditText
        android:id="@+id/password_new"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:fontFamily="@font/roboto_slab"
        android:hint="@string/new_password"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="#92FFFFFF"
        android:textCursorDrawable="@color/colorTurquoise"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toEndOf="@+id/textViewPw"
        app:layout_constraintTop_toBottomOf="@+id/email_new" />

    <EditText
        android:id="@+id/password_new2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:fontFamily="@font/roboto_slab"
        android:hint="@string/repeat_new_password"
        android:singleLine="true"
        android:textColor="@color/colorWhite"
        android:textColorHint="#92FFFFFF"
        android:textCursorDrawable="@color/colorTurquoise"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewPw2"
        app:layout_constraintTop_toBottomOf="@+id/password_new" />

    <Button
        android:id="@+id/btnDeleteAccount"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="50dp"
        android:background="@color/colorButtonRed"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/delete_account_btn"
        android:textColor="@color/colorWhite"
        android:textColorHighlight="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textColorLink="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditProfileRest" />

    <ImageButton
        android:id="@+id/profile_game_go_back_arrow"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="41dp"
        android:backgroundTint="#00FFFFFF"
        android:contentDescription="@string/go_back_arrow"
        android:src="@drawable/ic_go_back_arrow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.042"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewPw"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/password"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/password_new"
        app:layout_constraintEnd_toStartOf="@+id/password_new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password_new" />

    <TextView
        android:id="@+id/textViewPw2"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/password_retype"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/password_new2"
        app:layout_constraintEnd_toStartOf="@+id/password_new2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/password_new2" />

    <TextView
        android:id="@+id/textViewPwOld"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="38dp"
        android:layout_marginEnd="60dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/please_type_in_your_current_password"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewMail"
        android:layout_width="wrap_content"
        android:layout_height="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/e_mail"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/email_new"
        app:layout_constraintEnd_toStartOf="@+id/email_new"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/email_new" />

    <Button
        android:id="@+id/btnEditProfileRest"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="50dp"
        android:background="@android:color/black"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/save_btn"
        android:textColor="@color/colorWhite"
        android:textColorHighlight="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textColorLink="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_new2" />

    <EditText
        android:id="@+id/password_old"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""
        android:backgroundTint="@color/colorWhite"
        android:ems="10"
        android:hint="@string/current_password_label"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textColorHint="#92FFFFFF"
        android:textCursorDrawable="@color/colorTurquoise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPwOld" />

    <Button
        android:id="@+id/next_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="32dp"
        android:background="@android:color/black"
        android:fontFamily="@font/roboto_slab_bold"
        android:text="@string/next"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_old" />

</androidx.constraintlayout.widget.ConstraintLayout>

