<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity">

    <ProgressBar
        android:id="@+id/progressBarReset"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center|bottom"
        android:indeterminateDrawable="@drawable/progress_circle"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/labelEmailReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelEmailReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/e_mail"
        app:layout_constraintBottom_toTopOf="@+id/emailFieldReset"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/emailFieldReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/e_mail_placeholder"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />


    <TextView
        android:id="@+id/textErrorLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FF1744"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@id/btnSubmitReset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailFieldReset"
        tools:visibility="visible" />

    <Button
        android:id="@+id/btnSubmitReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorButtonGreen"
        android:text="@string/reset_password"
        android:textColor="@color/colorWhite"
        android:textColorHighlight="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textColorLink="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/btnBack"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textErrorLogin" />

    <Button
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorButtonGreen"
        android:text="@string/sign_in_btn"
        android:textColor="@color/colorWhite"
        android:textColorHighlight="@color/colorWhite"
        android:textColorHint="@color/colorWhite"
        android:textColorLink="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmitReset" />

</androidx.constraintlayout.widget.ConstraintLayout>