<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LandingActivity">


        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="413dp"
            android:layout_height="165dp"
            android:layout_marginTop="40dp"
            android:contentDescription="logo"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/landing_new_game"
            android:layout_width="366dp"
            android:layout_height="105dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="232dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/green_view_border"
            android:text="@string/new_game"
            android:textColor="@color/colorTitles"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/landing_join_game"
            android:layout_width="366dp"
            android:layout_height="105dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="356dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/green_view_border"
            android:text="@string/join_game"
            android:textColor="@color/colorTitles"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/landing_profile"
            android:layout_width="366dp"
            android:layout_height="105dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="484dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/green_view_border"
            android:text="@string/profile"
            android:textColor="@color/colorTitles"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/landing_friends"
            android:layout_width="366dp"
            android:layout_height="105dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="608dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/green_view_border"
            android:text="@string/friends"
            android:textColor="@color/colorTitles"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>